samples/_failures_safe/1761478463_1f986f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e527802.c: In function ‘main’:
./samples/SAFE/__tmp_6e527802.c:166:17: error: expected expression at end of input
  166 |                 if (scanf("%d", &src) !=
      |                 ^~
./samples/SAFE/__tmp_6e527802.c:166:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e527802.c:166:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e527802.c:166:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e527802.c:166:17: error: expected declaration or statement at end of input
